--- a/index.html
+++ b/index.html
@@ -145,6 +145,42 @@
               <div class="card-desc-wrapper">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
+                <ul class="socials-list list">
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -156,6 +192,42 @@
               <div class="card-desc-wrapper">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
+                <ul class="socials-list list">
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -167,6 +239,42 @@
               <div class="card-desc-wrapper">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
+                <ul class="socials-list list">
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -178,6 +286,42 @@
               <div class="card-desc-wrapper">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
+                <ul class="socials-list list">
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a href="" class="socials-item-link link">
+                      <svg class="socials-icon" width="16px" height="16px">
+                        <use
+                          href="./images/svg/socials.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
