--- a/index.html
+++ b/index.html
@@ -327,6 +327,55 @@
           </ul>
         </div>
       </section>
+      <section class="customers-section">
+        <div class="container customers-container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-logo" width="104px" height="56px">
+                  <use href="./images/svg/customers-defs.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-logo" width="104px" height="56px">
+                  <use
+                    href="./images/svg/customers-defs.svg#icon-tagline"
+                  ></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link"
+                ><svg class="customers-logo" width="104px" height="56px">
+                  <use
+                    href="./images/svg/customers-defs.svg#icon-company"
+                  ></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-logo" width="104px" height="56px">
+                  <use
+                    href="./images/svg/customers-defs.svg#icon-foster"
+                  ></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link"
+                ><svg class="customers-logo" width="104px" height="56px">
+                  <use
+                    href="./images/svg/customers-defs.svg#icon-brand"
+                  ></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link"
+                ><svg class="customers-logo" width="104px" height="56px">
+                  <use
+                    href="./images/svg/customers-defs.svg#icon-tag-line"
+                  ></use></svg></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer footer-section">
       <div class="container footer-container">
