--- a/index.html
+++ b/index.html
@@ -149,34 +149,28 @@
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -196,34 +190,28 @@
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -243,34 +231,28 @@
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,34 +272,28 @@
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use href="./images/svg/socials.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a href="" class="socials-item-link link">
                       <svg class="socials-icon" width="16px" height="16px">
-                        <use
-                          href="./images/svg/socials.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -327,57 +303,64 @@
           </ul>
         </div>
       </section>
-      
+
       <section class="customers-section">
-        <div class="container customers-container">
+        <div class="container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/svg/customers-defs.svg#icon-yaco"></use>
+                <svg class="customers-icon" width="104px" height="56px">
+                  <use href="./images/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-icon" width="104px" height="56px">
                   <use
-                    href="./images/svg/customers-defs.svg#icon-tagline"
-                  ></use></svg></a>
+                    href="./images/icons.svg#icon-tagline"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link"
-                ><svg class="customers-logo" width="104px" height="56px">
+                ><svg class="customers-icon" width="104px" height="56px">
                   <use
-                    href="./images/svg/customers-defs.svg#icon-company"
-                  ></use></svg></a>
+                    href="./images/icons.svg#icon-company"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg class="customers-logo" width="104px" height="56px">
-                  <use
-                    href="./images/svg/customers-defs.svg#icon-foster"
-                  ></use></svg></a>
+                <svg class="customers-icon" width="104px" height="56px">
+                  <use href="./images/icons.svg#icon-foster"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link"
-                ><svg class="customers-logo" width="104px" height="56px">
-                  <use
-                    href="./images/svg/customers-defs.svg#icon-brand"
-                  ></use></svg></a>
+                ><svg class="customers-icon" width="104px" height="56px">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link"
-                ><svg class="customers-logo" width="104px" height="56px">
+                ><svg class="customers-icon" width="104px" height="56px">
                   <use
-                    href="./images/svg/customers-defs.svg#icon-tag-line"
-                  ></use></svg></a>
+                    href="./images/icons.svg#icon-tag-line"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
+
     <footer class="footer footer-section">
       <div class="container footer-container">
         <div class="footer-content-wrapper">
@@ -389,6 +372,39 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+        <div class="footer-socials">
+          <h3 class="section-subtitle">Social media</h3>
+          <ul class="socials-list list">
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
