--- a/portfolio.html
+++ b/portfolio.html
@@ -199,6 +199,39 @@
             digital marketing & growth solutions.
           </p>
         </div>
+        <div class="footer-socials">
+          <h3 class="section-subtitle">Social media</h3>
+          <ul class="socials-list list">
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/svg/socials.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/svg/socials.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/svg/socials.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="socials-item-link link">
+                <svg class="socials-icon" width="24px" height="24px">
+                  <use href="./images/svg/socials.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
