--- a/portfolio.html
+++ b/portfolio.html
@@ -85,95 +85,114 @@
           <h1 class="visually-hidden">Projects</h1>
           <ul class="project-list list">
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Banking App Interface Concept</h3>
-                <p class="section-text">App</p>
-              </div>
+              <a class="project-link link" href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">
+                    Banking App Interface Concept
+                  </h3>
+                  <p class="section-text">App</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Cashless Payment</h3>
-                <p class="section-text">Marketing</p>
-              </div>
+              <a class="project-link link"  href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Cashless Payment</h3>
+                  <p class="section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-3.jpg"
-                alt="Meditaion App"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Meditaion App</h3>
-                <p class="section-text">App</p>
-              </div>
+              <a class="project-link link" href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-3.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Meditaion App</h3>
+                  <p class="section-text">App</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-4.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Taxi Service</h3>
-                <p class="section-text">Marketing</p>
-              </div>
+              <a class="project-link link"href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Taxi Service</h3>
+                  <p class="section-text">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Screen Illustrations</h3>
-                <p class="section-text">Design</p>
-              </div>
+              <a class="project-link link"href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Screen Illustrations</h3>
+                  <p class="section-text">Design</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Online Courses</h3>
-                <p class="section-text">Marketing</p>
-              </div>
+              <a class="project-link link"href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Online Courses</h3>
+                  <p class="section-text">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Instagram Stories Concept</h3>
-                <p class="section-text">Design</p>
-              </div>
+              <a class="project-link link"href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Instagram Stories Concept</h3>
+                  <p class="section-text">Design</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
-                src="./images/portfolio/projectcard-8.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <div class="card-desc-wrapper">
-                <h3 class="section-subtitle">Organic Food</h3>
-                <p class="section-text">Web Site</p>
-              </div>
+              <a class="project-link link"href="">
+                <img class="project-img"
+                  src="./images/portfolio/projectcard-8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="card-desc-wrapper">
+                  <h3 class="section-subtitle">Organic Food</h3>
+                  <p class="section-text">Web Site</p>
+                </div></a
+              >
             </li>
             <li class="project-item">
-              <img
+              <a class="project-link link" href="">
+              <img class="project-img"
                 src="./images/portfolio/projectcard-9.jpg"
                 alt="Fresh Coffee"
                 width="360"
@@ -181,7 +200,7 @@
               <div class="card-desc-wrapper">
                 <h3 class="section-subtitle">Fresh Coffee</h3>
                 <p class="section-text">Web Site</p>
-              </div>
+              </div></a>
             </li>
           </ul>
         </div>
@@ -205,28 +224,28 @@
             <li class="socials-item">
               <a href="" class="socials-item-link link">
                 <svg class="socials-icon" width="24px" height="24px">
-                  <use href="./images/svg/socials.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item">
               <a href="" class="socials-item-link link">
                 <svg class="socials-icon" width="24px" height="24px">
-                  <use href="./images/svg/socials.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item">
               <a href="" class="socials-item-link link">
                 <svg class="socials-icon" width="24px" height="24px">
-                  <use href="./images/svg/socials.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item">
               <a href="" class="socials-item-link link">
                 <svg class="socials-icon" width="24px" height="24px">
-                  <use href="./images/svg/socials.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
