--- a/index.html
+++ b/index.html
@@ -311,25 +311,21 @@
             <li class="customers-item">
               <a href="" class="customers-link link">
                 <svg class="customers-icon" width="104px" height="56px">
-                  <use href="./images/icons.svg#icon-yaco"></use>
+                  <use href="./images/icons.svg#icon-yoco"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
                 <svg class="customers-icon" width="104px" height="56px">
-                  <use
-                    href="./images/icons.svg#icon-tagline"
-                  ></use>
+                  <use href="./images/icons.svg#icon-tagline"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link"
                 ><svg class="customers-icon" width="104px" height="56px">
-                  <use
-                    href="./images/icons.svg#icon-company"
-                  ></use>
+                  <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
@@ -350,9 +346,7 @@
             <li class="customers-item">
               <a href="" class="customers-link link"
                 ><svg class="customers-icon" width="104px" height="56px">
-                  <use
-                    href="./images/icons.svg#icon-tag-line"
-                  ></use>
+                  <use href="./images/icons.svg#icon-tag-line"></use>
                 </svg>
               </a>
             </li>
