--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
           <h2 class="visually-hidden">Our features</h2>
           <ul class="feauters list">
             <li class="feauters-item">
+              <div class="feauters-img">
+                <svg class="feauters-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +83,11 @@
               </p>
             </li>
             <li class="feauters-item">
+              <div class="feauters-img">
+                <svg class="feauters-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +95,11 @@
               </p>
             </li>
             <li class="feauters-item">
+              <div class="feauters-img">
+                <svg class="feauters-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +107,11 @@
               </p>
             </li>
             <li class="feauters-item">
+              <div class="feauters-img">
+                <svg class="feauters-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
