--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <li class="customers-item">
               <a href="" class="customers-link link">
                 <svg class="customers-icon" width="104px" height="56px">
-                  <use href="./images/icons.svg#icon-yoco"></use>
+                  <use href="./images/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
